Se corrigen varias cosas habladas en la primer entrega, ademas se agregan las interfaces de propietario e inquilino, falta arreglar los test que se rompieron por las modificaciones